fixed cursor not showing when width is short

--- a/css/style.css
+++ b/css/style.css
@@ -1500,6 +1500,9 @@ input:focus, textarea:focus {
   .scrolldown {
     margin-top: 0;
   }
+  body {
+    cursor: auto;
+  }
   .cursor-dot, .cursor-outline {
     display: none;
   }
