--- a/scss/_queries.scss
+++ b/scss/_queries.scss
@@ -40,6 +40,10 @@
       .scrolldown {
         margin-top: 0;
       }
+
+      body{
+        cursor:auto
+    }
     
       .cursor-dot, .cursor-outline{
         display: none;
